# forvis

./: .gitignore  pyproject.toml
forvis/commands/: train_cli_app.py
forvis/criterions/: __init__.py  bce.py
forvis/datasets/: minio_driver.py  organ.py  organ_minio.py
forvis/infer/resnet18/: infer.py  llm.py
forvis/models/: __init__.py  resnet18.py
forvis/presets/: organ.yaml  organ_minio.yaml
forvis/tasks/: __init__.py  organ.py  organ_minio.py
forvis/web/: __init__.py  app.py  infer.py
frovis_dpp/: data_lake.py
tests/: test_minio.py  test_web.py
