[project]
name = "forvis"
version = "0.1.0"
description = ""
authors = [
    {name = "MigoXV",email = "1695587905@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu121"

[[tool.poetry.source]]
name = "mirrors"
priority = "primary"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[tool.poetry.dependencies]
PyYAML = "6.0.2"
numpy = "2.0.1"
python = "^3.10"
torch = {version = "2.3.1", source = "pytorch"}
torchaudio = {version = "2.3.1", source = "pytorch"}
torchvision = {version = "0.18.1", source = "pytorch"}
fairseq = "^0.12.2"
wandb = "^0.19.2"
scikit-learn = "^1.6.1"
pyarrow = "^18.1.0"
pandas = "^2.2.3"
pillow = "^11.1.0"
h5py = "^3.12.1"
imageio = "^2.36.1"
typer = "^0.15.1"
seaborn = "^0.13.2"
minio = "^7.2.15"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
